--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ REDIS_URL=redis://localhost:6379
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
+# Google OAuth (https://console.cloud.google.com/ → APIs & Services → Credentials)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 # Email (for notifications)
 EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
@@ -37,3 +41,13 @@ TEMP_DIR=/tmp
 # Feature flags
 ENABLE_ICAL_MONITORING=true
 ENABLE_PRICE_TRACKING=true
+
+# Stripe (https://dashboard.stripe.com/apikeys)
+STRIPE_SECRET_KEY=sk_test_...
+STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Stripe Price IDs — create these in your Stripe dashboard
+# Dashboard → Products → Add product → Add price
+STRIPE_PRICE_BASIC_MONTHLY=price_...
+STRIPE_PRICE_PREMIUM_MONTHLY=price_...
+STRIPE_PRICE_PREMIUM_YEARLY=price_...
