--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "start": "node src/index.js",
     "worker": "node src/workers/scraper-worker.js",
     "migrate": "node src/db/migrate.js",
+    "migrate:to-supabase": "node src/db/migrate-to-supabase.js",
+    "migrate:to-supabase:verify": "node src/db/migrate-to-supabase.js --skip-verification=false",
+    "migrate:specific": "node src/db/migrate-to-supabase.js",
+    "setup:replication": "node src/db/setup-replication.js",
+    "db:health": "node -e \"import('./src/db/health-check.js').then(m => { const hc = m.healthCheck; hc.check().then(s => console.log(hc.formatStatus(s))); })\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": ["airbnb", "alerts", "scraper"],
