--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bull": "^4.12.0",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.19.0",
     "express-validator": "^7.3.1",
     "helmet": "^7.1.0",
     "ical.js": "^1.5.0",
