Rebrand from 'Airbnb Alerts' to 'Alert Buzz' across entire site
Updated all instances of 'Airbnb Alerts' to 'Alert Buzz' in:
- public/auth.html - Login/register pages
- public/billing.html - Billing page
- public/settings.html - Settings page
- public/index.html - Main dashboard
- src/services/email.js - Email templates
- .env.example - Environment variables
- GOOGLE_OAUTH_SECURITY.md - Documentation
- ARCHITECTURE_DIAGRAMS.md - Architecture docs

Brand consistency:
- Page titles updated
- Header text updated
- Email subject lines updated
- Footer text updated
- Documentation references updated
- Environment variable examples updated

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ GOOGLE_CLIENT_SECRET=
 EMAIL_SERVICE=gmail
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
-EMAIL_FROM=Airbnb Alerts <noreply@airbnbalerts.com>
+EMAIL_FROM=Alert Buzz <noreply@alertbuzz.com>
 
 # Python scraper path
 PYTHON_PATH=python3
