--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,8 @@ API_BASE_URL=http://localhost:3000
 # Database (PostgreSQL)
 DATABASE_URL=postgresql://user:password@localhost:5432/airbnb_alerts
 # Or use Railway's auto-injected DATABASE_URL
+# Set to 'false' only if your provider uses a self-signed cert (e.g. Railway private networking)
+DATABASE_SSL_REJECT_UNAUTHORIZED=true
 
 # Redis (for Bull queue)
 REDIS_URL=redis://localhost:6379
